# sambee

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .trivyignore.yaml  AGENTS.md  BROWSER_TEST_COMPLETION_SUMMARY.md  BROWSER_TEST_FIX_PLAN.md  CHANGE_NOTIFICATION.md  Caddyfile  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DIRECT_PREPROCESSOR_CONVERSION_PLAN.md  Dockerfile  Documentation.md  FRONTEND_TEST_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_PLAN.md  KEYBOARD_NAVIGATION_FIX.md  LICENSE  LOGGING_IMPROVEMENT_PLAN.md  MOBILE_UI_IMPLEMENTATION_PLAN.md  MOBILE_UX_ANALYSIS.md  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_DETAILED.md  PERFORMANCE_FIX.md  PERFORMANCE_PROFILING.md  PERFORMANCE_PROFILING_QUICK_REF.md  PHASE1_IMPLEMENTATION.md  PHASE3A_QUICK_REFERENCE.md  PREVIEW_SUPPORT.md  README.md  TANSTACK_VIRTUAL_MIGRATION_PLAN.md  TEST_COVERAGE_PLAN.md  TEST_PERFORMANCE_OPTIMIZATION.md  TEST_PERFORMANCE_PHASE3A_RESULTS.md  TEST_PERFORMANCE_PHASE3A_SUMMARY.md  (+10 more)
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/nsis/: header.af  installer-hooks.nsh  installer-template.nsi  sidebar.af
companion/src-tauri/src/: http_client.rs  lib.rs  logging.rs  main.rs  proxy_auth.rs  shutdown_event.rs
companion/src-tauri/src/app_registry/: linux.rs  macos.rs  mod.rs  windows.rs
companion/src-tauri/src/commands/: app_picker.rs  download.rs  file_info.rs  localization.rs  mod.rs  (+5 more)
companion/src-tauri/wix/: main.wxs
(+1123 files in other folders)
