[package]
name = "sambee-companion"
version = "0.1.0"
edition = "2021"
description = "Sambee Companion — opens files from Sambee in native desktop editors"
authors = []

[lib]
name = "sambee_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
url = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
mime_guess = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
png = "0.17"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
